--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Smile Journey Estimator - ประเมินระยะเวลาจัดฟัน</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;500;700&display=swap" rel="stylesheet">
@@ -109,15 +110,19 @@
                     </h3>
                     <ul id="recommendations-list" class="list-disc list-inside text-sm text-sky-700 space-y-1"></ul>
                 </div>
+                
+                <div id="liff-success-message" class="hidden text-center bg-green-100 text-green-800 p-3 rounded-lg my-4">
+                    ส่งผลลัพธ์เข้าห้องแชทเรียบร้อยแล้ว!
+                </div>
 
                 <div class="bg-amber-100 border-l-4 border-amber-500 text-amber-800 p-4 rounded-lg my-6 text-left">
                     <p class="font-bold">ย้ำอีกครั้ง!</p>
                     <p class="text-sm">นี่เป็นเพียงการคาดการณ์จากข้อมูลที่คุณให้มาเท่านั้น ระยะเวลาจริงอาจเปลี่ยนแปลงได้ตามการวินิจฉัยของทันตแพทย์</p>
                 </div>
 
-                <button onclick="window.open('https://liff.line.me/2007668589-YgkQmRZj', '_blank')" class="w-full bg-green-500 text-white font-bold py-3 px-4 rounded-lg hover:bg-green-600 transition-colors duration-300 shadow-md mb-3 flex items-center justify-center">
+                <button onclick="shareResultsOnLine()" class="w-full bg-green-500 text-white font-bold py-3 px-4 rounded-lg hover:bg-green-600 transition-colors duration-300 shadow-md mb-3 flex items-center justify-center">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-2" fill="currentColor" viewBox="0 0 24 24"><path d="M16.22,10.32,14.6,12.5a.76.76,0,0,1-1.25-.05q-1.4-2.1-2.8-4.22a.86.86,0,0,1-.18-.64,3.47,3.47,0,0,1,.44-1.5,4,4,0,0,1,1.23-1.23,3.47,3.47,0,0,1,1.5-.44.86.86,0,0,1,.64.18q2.12,1.4,4.22,2.8a.76.76,0,0,1,.05,1.25ZM11.48,14.47a3.3,3.3,0,0,1-2.12.83,3.2,3.2,0,0,1-2.37-1,3.3,3.3,0,0,1-1-2.37,3.2,3.2,0,0,1,1-2.37,3.3,3.3,0,0,1,2.37-1A3.2,3.2,0,0,1,11.7,9.75V12A2.52,2.52,0,0,0,9.22,14.5a2.52,2.52,0,0,0,2.5-2.52H9.22a.76.76,0,0,1,0-1.52h4a.76.76,0,0,1,.76.76A3.29,3.29,0,0,1,11.48,14.47ZM12,0A12,12,0,1,0,24,12,12,12,0,0,0,12,0Z"/></svg>
-                    นัดปรึกษาคุณหมอทาง LINE
+                    ส่งผลประเมินเข้าไลน์เพื่อปรึกษา
                 </button>
                 <button onclick="restartQuiz()" class="w-full bg-slate-500 text-white font-bold py-2 px-4 rounded-lg hover:bg-slate-600 transition-colors duration-300">
                     ประเมินใหม่
@@ -244,7 +249,7 @@
 
         function restartQuiz() {
             showScreen('welcome');
-            const resultUI = ['result-content', 'recommendations-container', 'special-alert-container'];
+            const resultUI = ['result-content', 'recommendations-container', 'special-alert-container', 'liff-success-message'];
             resultUI.forEach(id => document.getElementById(id).classList.add('hidden'));
             document.getElementById('loading-spinner').style.display = 'flex';
         }
@@ -443,6 +448,44 @@
                 notes: Array.from(notes),
                 alerts: Array.from(alerts)
             };
+        }
+
+        async function shareResultsOnLine() {
+            const liffId = "2007668589-YgkQmRZj";
+            const result = calculateDuration();
+            const { durationString, notes, alerts } = result;
+
+            let messageText = `สรุปผลประเมิน Smile Journey:\n\n`;
+            messageText += `จำนวนครั้งโดยประมาณ: ${durationString}\n\n`;
+
+            if (notes.length > 0) {
+                messageText += "คำแนะนำเพิ่มเติม:\n";
+                notes.forEach(note => { messageText += `• ${note}\n`; });
+                messageText += "\n";
+            }
+
+            if (alerts.length > 0) {
+                messageText += "ข้อควรพิจารณาพิเศษ:\n";
+                alerts.forEach(alert => { messageText += `• ${alert}\n`; });
+                messageText += "\n";
+            }
+            
+            messageText += "รบกวนเจ้าหน้าที่ช่วยดูผลและให้คำแนะนำเพิ่มเติมด้วยค่ะ/ครับ";
+
+            try {
+                await liff.init({ liffId: liffId });
+                if (liff.isInClient()) {
+                    await liff.sendMessages([{ type: 'text', text: messageText }]);
+                    const successMsg = document.getElementById('liff-success-message');
+                    successMsg.classList.remove('hidden');
+                    setTimeout(() => { successMsg.classList.add('hidden'); }, 4000);
+                } else {
+                    window.open(`https://liff.line.me/${liffId}`, '_blank');
+                }
+            } catch (error) {
+                console.error('LIFF Error:', error);
+                window.open(`https://liff.line.me/${liffId}`, '_blank');
+            }
         }
 
         // Initial call
