--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
 
             const messagesToSend = [
                 { type: 'text', text: summaryMessage },
-                { type: 'text', text: 'เลือกสาขาที่จะทำการสอบถามเพิ่มเติม' }
+                { type: 'text', text: 'เลือกสาขาที่จะสอบถามเพิ่มเติม' }
             ];
 
             try {
